# icarus

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  dokploy.py  dokploy.yml.example  main.py  pyproject.toml  release-please-config.json  skills-lock.json
.agents/skills/worktrunk/reference/: switch.md
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release-please.yml
backlog/: config.yml
backlog/tasks/: task-003 - Implement-dokploy.py-changes-to-fully-support-prod-project-recreation.md  task-004 - Import-existing-Dokploy-projects-and-services-into-local-state.md  task-005 - Add-unified-`deploy`-subcommand-that-runs-check-setup-env-and-deploy-in-sequence.md  task-007 - Auto-select-GitHub-provider-by-matching-owner.md  task-008 - Add-`uv-tool-install`-support-with-`dps`-CLI-entry-point.md  task-009 - Monitor-Dokploy-upstream-releases-via-GitHub-Actions.md
docs/: api-notes.md  configuration.md  testing.md
examples/docker-only/: dokploy.yml
examples/minimal/: dokploy.yml
examples/web-app/: dokploy.yml
schemas/: dokploy.schema.json
src/dokploy_seed/: __init__.py
tests/: cloud-init.yml  conftest.py  strategies.py  test_e2e.py  test_integration.py  test_property.py  test_unit.py
tests/fixtures/: docker_only_config.yml  github_static_config.yml  minimal_config.yml  sample_state.yml  web_app_config.yml
